[package]
name = "ft2"
version = "0.2.0"
authors = ["Coeuvre <coeuvre@gmail.com>", "M Farkas-Dyck <strake888@gmail.com>"]
keywords = ["freetype", "font", "glyph"]
description = "Bonds for FreeType font library"
license = "MIT"
readme = "README.md"
repository = "https://github.com/strake/ft2.rs"

[lib]
name = "freetype"

[dependencies]
fallible = "0.1.2"
flags = "0.1"
libc = { version = "0.2.1", default-features = false }
null-terminated = "0.3"
freetype-sys = "0.6.0"

[dev-dependencies]
unicode-normalization = "0.1.0"
